Features: Fixing card background transparency intensity - increase for readability

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,7 +4,7 @@
 // -----------------------------------------------------------------------------
 
 .card {
-  background-color: rgba($light-grey-1, 0.4);
+  background-color: rgba($light-grey-1, 0.8);
   border-radius: 0.4rem;
   box-shadow: 0 2rem 4rem rgba(#000, 0.2);
   text-align: center;
